# Transactional-and-AML-Detection-System

./: .gitignore  Dockerfile  README.md  SCORECARD.md  config.py  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  sample.csv  synthetic_data.csv
.github/workflows/: ci.yml
analyze/: features.py  ml.py  rules.py
analyzers/aml/: baselines.py  evaluate.py
analyzers/categorization/: analyzer.py  engine.py
analyzers/disputes/: analyzer.py  models.py
analyzers/reconciliation/: analyzer.py  matcher.py  models.py
analyzers/reporting/: analyzer.py
backend/app/: cli.py  config.py
backend/app/detect/: __init__.py  rules.py
backend/app/generate/: anomalies.py
backend/app/storage/: models.py
backend/tests/: test_v2.py
core/store/: queries.py
data/: adapter.py  anomalies.py  generator.py  loader.py  reconciliation.py  schema.py  transactions.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/accounts/: page.tsx
frontend/src/components/: AIExplanationCard.tsx  AccountsTable.tsx  AnalyzerBadge.tsx  AnalyzerCard.tsx  AppShell.tsx  EmptyState.tsx  ErrorState.tsx  EvidencePanel.tsx  FilterBar.tsx  FindingsTable.tsx  LoadingSkeleton.tsx  NetworkGraph.tsx  ScorePill.tsx  SeverityBadge.tsx  Sidebar.tsx  StatCard.tsx  TopBar.tsx
frontend/src/lib/: api.ts  severity.ts
interface/: api.py  cli.py
store/: db.py  models.py  queries.py
tests/: test_v0.py  test_v1.py  test_v2.py  test_v5.py
tests/aml/: test_v8.py
tests/disputes/: test_disputes.py
tests/reconciliation/: test_reconciliation.py
(+3 files in other folders)
