[project]
name = "transaction-aml-detection-system"
version = "0.0.0"
description = "Monitors card-payment transactions and flags suspicious ones (fraud + AML)."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "rich>=13.9",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy>=2.0",
    "pandas>=3.0.3",
    "numpy>=2.4.6",
    "faker>=40.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[tool.uv]
package = false
